# Pentaract

./: .env.exmple  Cargo.toml  Dockerfile  LICENSE  README.md
src/common/telegram_api/: bot_api.rs
src/repositories/: access.rs  storages.rs
src/routers/: files.rs
src/services/: storages.rs
ui/: index.html
ui/src/: App.jsx  ColorModeContext.jsx  index.css
ui/src/api/: request.js
ui/src/common/: uploadProgress.js
ui/src/components/: FSListItem.jsx  Header.jsx  SideBar.jsx  SideBarItem.jsx  ThemeToggle.jsx
ui/src/layouts/: Basic.jsx
ui/src/pages/: Login.jsx  Register.jsx
ui/src/pages/Files/: index.jsx
ui/src/pages/StorageWorkers/: index.jsx
ui/src/pages/Storages/: StorageCreateForm.jsx  index.jsx
